--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,58 +1,28 @@
-
-
-<nz-drawer [nzClosable]="false" [nzVisible]="visible" [nzPlacement]="placement" nzTitle="Basic Drawer" (nzOnClose)="close()">
-  <nz-layout>
-    <!-- <button nz-button [nzType]="'primary'" (click)="toggleCollapsed()" style="margin-bottom: 10px;">
-      <i nz-icon [type]="isCollapsed?'menu-unfold':'menu-fold'"></i>
-    </button> -->
-    <nz-sider nzCollapsible [(nzCollapsed)]="isCollapsed" [nzTrigger]="triggerTemplate">
-        <div class="logo">
-        </div>
-      <ul nz-menu [nzMode]="'inline'" nzTheme='dark' [nzInlineCollapsed]="isCollapsed">
-        <li nz-menu-item nz-tooltip nzPlacement="right" [nzTitle]="isCollapsed ? 'Navigation One' : ''">
-          <span title>
-            <i nz-icon type="mail"></i>
-            <span>Navigation One</span>
-          </span>
+<router-outlet></router-outlet>
+<nz-layout>
+  <nz-header>
+    <nz-dropdown nzPlacement="bottomRight">
+      <div nz-dropdown>
+        <nz-avatar nzIcon="user"></nz-avatar>
+        Samuel
+      </div>
+      <ul nz-menu nzSelectable>
+        <li nz-menu-item>
+          <a>1st menu item</a>
         </li>
-        <li nz-submenu>
-          <span title>
-            <i nz-icon type="appstore"></i>
-            <span>Navigation Two</span>
-          </span>
-          <ul>
-            <li nz-menu-item>Option 5</li>
-            <li nz-menu-item>Option 6</li>
-            <li nz-submenu>
-              <span title>Submenu</span>
-              <ul>
-                <li nz-menu-item>Option 7</li>
-                <li nz-menu-item>Option 8</li>
-              </ul>
-            </li>
-          </ul>
+        <li nz-menu-item>
+          <a>2nd menu item</a>
         </li>
-        <li nz-submenu>
-          <span title>
-            <i nz-icon type="setting"></i>
-            <span>Navigation Three</span>
-          </span>
-          <ul>
-            <li nz-menu-item>Option 9</li>
-            <li nz-menu-item>Option 10</li>
-            <li nz-menu-item>Option 11</li>
-          </ul>
+        <li nz-menu-item>
+          <a>3rd menu item</a>
         </li>
       </ul>
-    </nz-sider>
+    </nz-dropdown>
+  </nz-header>
+  <nz-layout>
+    <nz-sider>left sidebar</nz-sider>
+    <nz-content>main content</nz-content>
+    <nz-sider>right sidebar</nz-sider>
   </nz-layout>
-</nz-drawer>
-<button nz-button nzType="primary" (click)="open()">Open</button>
-<h1>Demo NG-Zorro</h1>
-<p>
-  Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit.
-
-  Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?
-</p>
-
-<button nz-button nzType="primary">Primary</button>
+  <nz-footer>footer</nz-footer>
+</nz-layout>
