--- a/src/app/public/login/login.component.html
+++ b/src/app/public/login/login.component.html
@@ -6,7 +6,7 @@
         <nz-input-group [nzPrefix]="prefixUser">
           <input type="text" nz-input formControlName="userName" placeholder="Username">
         </nz-input-group>
-        <nz-form-explain *ngIf="validateForm.get('userName').dirty && validateForm.get('userName').errors">Please input your username!</nz-form-explain>
+        <nz-form-explain *ngIf="validateForm.get('userName').dirty && validateForm.get('userName').errors">¡Por favor, ingresa tu nombre de usuario!</nz-form-explain>
       </nz-form-control>
     </nz-form-item>
     <nz-form-item>
@@ -14,7 +14,7 @@
         <nz-input-group [nzPrefix]="prefixLock">
           <input type="password" nz-input formControlName="password" placeholder="Password">
         </nz-input-group>
-        <nz-form-explain *ngIf="validateForm.get('password').dirty && validateForm.get('password').errors">Please input your Password!</nz-form-explain>
+        <nz-form-explain *ngIf="validateForm.get('password').dirty && validateForm.get('password').errors">¡Por favor, ingresa tu contraseña de usuario!</nz-form-explain>
       </nz-form-control>
     </nz-form-item>
     <nz-form-item>
