--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,147 @@
-<router-outlet></router-outlet>
 <nz-layout>
-  <nz-header>
-    <nz-dropdown nzPlacement="bottomRight">
-      <div nz-dropdown>
-        <nz-avatar nzIcon="user"></nz-avatar>
-        Samuel
-      </div>
-      <ul nz-menu nzSelectable>
-        <li nz-menu-item>
-          <a>1st menu item</a>
-        </li>
-        <li nz-menu-item>
-          <a>2nd menu item</a>
-        </li>
-        <li nz-menu-item>
-          <a>3rd menu item</a>
-        </li>
-      </ul>
-    </nz-dropdown>
-  </nz-header>
-  <nz-layout>
-    <nz-sider>left sidebar</nz-sider>
-    <nz-content>main content</nz-content>
-    <nz-sider>right sidebar</nz-sider>
+  <nz-sider nzCollapsible [(nzCollapsed)]="isCollapsed" [nzTrigger]="triggerTemplate" [nzCollapsedWidth]="0" [nzWidth]="320" style="overflow: auto; height: 100vh; position: fixed; left: 0">
+    <div class="logo">
+    </div>
+    <ul nz-menu [nzTheme]="'dark'" [nzMode]="'inline'" [nzInlineCollapsed]="isCollapsed">
+      <li nz-submenu>
+        <span title><i nz-icon type="user"></i><span class="nav-text">nav 1</span></span>
+        <ul>
+            <li nz-menu-item><span><i class="anticon anticon-file"></i><span class="nav-text">nav 1</span></span></li>
+            <li nz-menu-item><span><i class="anticon anticon-video-camera"></i><span class="nav-text">nav 2</span></span></li>
+            <li nz-menu-item><span><i class="anticon anticon-upload"></i><span class="nav-text">nav 3</span></span></li>
+        </ul>
+      </li>
+      <li nz-submenu>
+          <span title><i nz-icon type="team"></i><span class="nav-text">nav 2</span></span>
+          <ul>
+              <li nz-menu-item><span><i class="anticon anticon-file"></i><span class="nav-text">nav 1</span></span></li>
+              <li nz-menu-item><span><i class="anticon anticon-video-camera"></i><span class="nav-text">nav 2</span></span></li>
+              <li nz-menu-item><span><i class="anticon anticon-upload"></i><span class="nav-text">nav 3</span></span></li>
+          </ul>
+      </li>
+      <li nz-menu-item><span><i class="anticon anticon-file"></i><span class="nav-text">nav 1</span></span></li>
+      <li nz-menu-item><span><i class="anticon anticon-video-camera"></i><span class="nav-text">nav 2</span></span></li>
+      <li nz-menu-item><span><i class="anticon anticon-upload"></i><span class="nav-text">nav 3</span></span></li>
+      <li nz-menu-item><span><i class="anticon anticon-bar-chart"></i><span class="nav-text">nav 4</span></span></li>
+      <li nz-menu-item><span><i class="anticon anticon-cloud-o"></i><span class="nav-text">nav 5</span></span></li>
+      <li nz-menu-item><span><i class="anticon anticon-appstore-o"></i><span class="nav-text">nav 6</span></span></li>
+      <li nz-menu-item><span><i class="anticon anticon-team"></i><span class="nav-text">nav 7</span></span></li>
+      <li nz-menu-item><span><i class="anticon anticon-shop"></i><span class="nav-text">nav 8</span></span></li>
+    </ul>
+  </nz-sider>
+  <nz-layout style="margin-left: 0px;">
+    <nz-header style="background: #fff; padding:0;">
+
+    </nz-header>
+    <nz-content style="margin:24px 16px 0;overflow: initial">
+    <div style="padding: 24px; background: #fff; text-align: center">
+      Content
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+
+      <button nz-button nzType="primary" [nzSize]="'large'" nzShape="circle" (click)="isCollapsed=!isCollapsed">
+        <i class="trigger"  nz-icon [type]="isCollapsed?'menu-unfold':'menu-fold'" ></i>
+      </button>
+    </div>
+    </nz-content>
+    <nz-footer style="text-align: center;">Ant Design ©2017 Implement By Angular</nz-footer>
   </nz-layout>
-  <nz-footer>footer</nz-footer>
 </nz-layout>
