--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,17 +1,30 @@
-:host ::ng-deep .trigger {
-    font-size: 18px;
-    line-height: 64px;
-    padding: 0 24px;
-    cursor: pointer;
-    transition: color .3s;
-}
+// :host ::ng-deep .trigger {
+//   padding: 0 24px;
+
+//   font-size: 18px;
+//   line-height: 64px;
+
+//   cursor: pointer;
+//   transition: color .3s;
+// }
 
 :host ::ng-deep .trigger:hover {
-    color: #1890ff;
+  color: #1890ff;
 }
 
 :host ::ng-deep .logo {
-    height: 32px;
-    background: rgba(255, 255, 255, .2);
-    margin: 16px;
+  height: 32px;
+  margin: 16px;
+
+  background: rgba(255, 255, 255, .2);
 }
+
+// .header {
+//   background-image: linear-gradient(62deg, #8ec5fc 0%, #e0c3fc 100%);
+// }
+// .logo {
+//   height: 32px;
+//   margin: 16px;
+
+//   background: rgba(255,255,255,.2);
+// }
