--- a/src/app/public/login/login.component.scss
+++ b/src/app/public/login/login.component.scss
@@ -20,7 +20,7 @@
   width: 100%;
   height: 100%;
 
-  background-color: #eee;
+  background-image: linear-gradient(62deg, #8ec5fc 0%, #e0c3fc 100%);
 
   align-items: center;
   flex-direction: column;
