--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,3 +14,23 @@ html {
 
   font-size: 16px;
 }
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  border-radius: 10px;
+
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  border-radius: 10px;
+
+  background-color: rgba(165, 161, 161, .76);
+}
