--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,12 +12,12 @@
   color: #1890ff;
 }
 
-:host ::ng-deep .logo {
-  height: 32px;
-  margin: 16px;
+// :host ::ng-deep .logo {
+//   height: 32px;
+//   margin: 16px;
 
-  background: rgba(255, 255, 255, .2);
-}
+//   background: rgba(255, 255, 255, .2);
+// }
 
 // .header {
 //   background-image: linear-gradient(62deg, #8ec5fc 0%, #e0c3fc 100%);
