--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,54 +1,142 @@
-<nz-layout class="layout">
+<nz-layout class="default-layout">
   <nz-header class="default-header">
-    <div class="logo"></div>
-    <button nz-button nzType="primary" [nzSize]="'large'" nzShape="circle" (click)="isCollapsed=!isCollapsed">
-      <i class="trigger"  nz-icon [type]="isCollapsed?'menu-unfold':'menu-fold'" ></i>
-    </button>
-    <ul nz-menu [nzTheme]="'dark'" [nzMode]="'horizontal'" style="line-height: 64px;">
+    <nz-sider class="default-logo" nzCollapsedWidth="63" nzWidth="203" nzCollapsible [(nzCollapsed)]="isCollapsed" [nzTrigger]="triggerTemplate">
+      <img src="./assets/logo-full.svg" alt="" style="width:160px; ">
+    </nz-sider>
+
+    <ul nz-menu [nzTheme]="'dark'" [nzMode]="'horizontal'">
+      <li nz-menu-item class="trigger" (click)="isCollapsed=!isCollapsed">
+        <i nz-icon [type]="isCollapsed?'menu-unfold':'menu-fold'"></i>
+      </li>
       <li nz-menu-item>nav 1</li>
       <li nz-menu-item>nav 2</li>
       <li nz-menu-item>nav 3</li>
     </ul>
   </nz-header>
   <nz-layout>
-    <nz-sider [nzWidth]="200" style="background:#fff">
-      <ul nz-menu [nzMode]="'inline'" style="height:100%">
+    <nz-sider nzCollapsible [(nzCollapsed)]="isCollapsed" nzWidth="220" [nzTrigger]="triggerTemplate" class="default-sider">
+      <ul nz-menu [nzTheme]="'light'" [nzMode]="'inline'" [nzInlineCollapsed]="isCollapsed">
         <li nz-submenu>
-          <span title><i nz-icon type="user"></i>subnav 1</span>
+          <span title><i nz-icon type="user"></i><span class="nav-text">User</span></span>
           <ul>
-            <li nz-menu-item>option1</li>
-            <li nz-menu-item>option2</li>
-            <li nz-menu-item>option3</li>
-            <li nz-menu-item>option4</li>
+            <li nz-menu-item>Tom</li>
+            <li nz-menu-item>Bill</li>
+            <li nz-menu-item>Alex</li>
           </ul>
         </li>
         <li nz-submenu>
-          <span title><i nz-icon type="laptop"></i>subnav 2</span>
+          <span title><i nz-icon type="team"></i><span class="nav-text">Team</span></span>
           <ul>
-            <li nz-menu-item>option5</li>
-            <li nz-menu-item>option6</li>
-            <li nz-menu-item>option7</li>
-            <li nz-menu-item>option8</li>
+            <li nz-menu-item>Team 1</li>
+            <li nz-menu-item>Team 2</li>
           </ul>
         </li>
-        <li nz-submenu>
-          <span title><i nz-icon type="notification"></i>subnav 3</span>
-          <ul>
-            <li nz-menu-item>option9</li>
-            <li nz-menu-item>option10</li>
-            <li nz-menu-item>option11</li>
-            <li nz-menu-item>option12</li>
-          </ul>
-        </li>
+        <li nz-menu-item><span><i nz-icon type="file"></i><span class="nav-text">File</span></span></li>
       </ul>
     </nz-sider>
-    <nz-layout style="padding:0 24px 24px">
-      <nz-breadcrumb style="margin:16px 0;">
-        <nz-breadcrumb-item>Home</nz-breadcrumb-item>
-        <nz-breadcrumb-item>List</nz-breadcrumb-item>
-        <nz-breadcrumb-item>App</nz-breadcrumb-item>
-      </nz-breadcrumb>
-      <nz-content style="background:#fff; padding: 24px; min-height: 280px;">Content</nz-content>
-    </nz-layout>
+    <nz-content class="default-content">
+      Content
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+    </nz-content>
+    <nz-footer>Footer</nz-footer>
   </nz-layout>
 </nz-layout>
