--- a/src/app/admin/dashboard/dashboard.component.scss
+++ b/src/app/admin/dashboard/dashboard.component.scss
@@ -1,38 +1,12 @@
-// .trigger {
-//   padding: 0 24px;
-
-//   font-size: 18px;
-//   line-height: 64px;
-
-//   cursor: pointer;
-//   transition: color .3s;
-// }
-
-// .trigger:hover {
-//   background-color: rgba(255,255,255,.2);
-//   color: #fff;
-// }
-
-// .logo {
-//   height: 32px;
-//   margin: 16px;
-
-//   background: rgba(255, 255, 255, .2);
-// }
-.logo {
-  float: left;
-
-  width: 120px;
-  height: 31px;
-  margin: 16px 28px 16px 0;
-
-  background: rgba(255, 255, 255, .2);
-}
 .default {
   &-layout {
+    display: flex;
     min-height: 100%;
+
+    flex-direction: column;
   }
   &-header {
+    // position: fixed;
     box-shadow: 0 1px 10px rgba(0,0,0,.2);
     width: 100%;
     height: 64px;
@@ -41,10 +15,22 @@
     background: #1890ff;
     color: #fff;
   }
+  &-logo {
+    float: left;
+
+    overflow: hidden;
+
+    background: #1890ff;
+  }
+  &-content {
+    width: 100%;
+    // margin-top: 64px;
+    // margin-left: 200px;
+  }
   &-sider {
+    // position: fixed;
+    // height: 100%;
+    // margin-top: 64px;
     background: #fff;
   }
 }
-
-
-
