--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,22 +15,46 @@ html {
   font-size: 16px;
 }
 
-::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-  border-radius: 10px;
+// ::-webkit-scrollbar-track {
+//   // background-color: transparent;
+// }
 
-  background-color: #f5f5f5;
-}
+// ::-webkit-scrollbar {
+//   width: 8px;
+// }
+
+// ::-webkit-scrollbar-thumb {
+//   padding: 8px;
+//   border-radius: 4px;
+//   margin: 8px;
+
+//   background: rgba(165, 161, 161, .76);
+
+//   &:hover {
+//     background: rgba(165, 161, 161, 1);
+//   }
+// }
 
 ::-webkit-scrollbar {
-  width: 12px;
+  width: 6px;
+  &-track {
+    box-shadow: inset 1px 1px 2px rgba(0,0,0,.1);
 
-  background-color: #f5f5f5;
-}
+    background: #fff;
+  }
+  &-thumb {
+    box-shadow: inset 1px 1px 2px rgba(0,0,0,.2);
+    border-radius: 2px;
 
-::-webkit-scrollbar-thumb {
-  box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-  border-radius: 10px;
+    background: #ccc;
+    &:hover {
+      background: #aaa;
+    }
 
-  background-color: rgba(165, 161, 161, .76);
+    &:active {
+      box-shadow: inset 1px 1px 2px rgba(0,0,0,.3);
+
+      background: #888;
+    }
+  }
 }
