--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
       <img src="./assets/logo-full.svg" alt="" style="width:160px; ">
     </nz-sider>
 
-    <ul nz-menu [nzTheme]="'dark'" [nzMode]="'horizontal'">
+    <ul nz-menu class="default-top-menu" [nzTheme]="'light'" [nzMode]="'horizontal'">
       <li nz-menu-item class="trigger" (click)="isCollapsed=!isCollapsed">
         <i nz-icon [type]="isCollapsed?'menu-unfold':'menu-fold'"></i>
       </li>
