--- a/src/app/admin/dashboard/dashboard.component.scss
+++ b/src/app/admin/dashboard/dashboard.component.scss
@@ -6,7 +6,9 @@
     flex-direction: column;
   }
   &-header {
-    // position: fixed;
+    display: flex;
+
+// position: fixed;
     box-shadow: 0 1px 10px rgba(0,0,0,.2);
     width: 100%;
     height: 64px;
@@ -15,9 +17,34 @@
     background: #1890ff;
     color: #fff;
   }
+  &-top-menu {
+    background: transparent;
+    color: #fff;
+    & .ant-menu-item {
+      border-radius: 4px;
+
+      &:hover {
+        background: rgba(255,255,255,.5);
+        color: #fff;
+      }
+      &:active {
+        background: transparent;
+        color: #fff;
+      }
+      &:focus {
+        background: transparent;
+        color: #fff;
+      }
+    }
+    & .ant-menu-item-selected {
+      background: transparent;
+      color: #fff;
+    }
+  }
   &-logo {
     float: left;
 
+    height: 64px;
     overflow: hidden;
 
     background: #1890ff;
