--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,44 +1,22 @@
 <nz-layout class="default-layout">
   <nz-header class="default-header">
-    <nz-sider class="default-logo"
-              [(nzCollapsed)]="isCollapsed"
-
-              nzCollapsible
-              [nzTrigger]="null">
-
-              <!-- nzCollapsedWidth="64"
-              nzWidth="203" -->
-      <img src="./assets/logo-full.svg" alt="" style="width:160px; ">
+    <nz-sider class="default-logo" [(nzCollapsed)]="isCollapsed" nzCollapsedWidth="64" nzWidth="200px" nzCollapsible
+      [nzTrigger]="null">
+      <img src="./assets/logo-full.svg" alt="" style="width:160px;">
     </nz-sider>
-    <!-- <ul
-        nz-menu
-        nzTheme="light"
-        nzMode="horizontal"
-        > -->
-        <!-- class="default-top-menu" -->
-        <!-- [nzInlineCollapsed]="isCollapsed" -->
-      <!-- <li nz-menu-item class="trigger" (click)="isCollapsed=!isCollapsed">
+    <ul class="default-top-menu" nz-menu nzTheme="light" nzMode="horizontal">
+      <li nz-menu-item class="trigger" (click)="isCollapsed=!isCollapsed">
         <i nz-icon [type]="isCollapsed ? 'menu-unfold' : 'menu-fold' "></i>
       </li>
-      <li nz-menu-item>nav 1</li>
+      <!-- <li nz-menu-item>nav 1</li>
       <li nz-menu-item>nav 2</li>
-      <li nz-menu-item>nav 3</li>
-    </ul> -->
+      <li nz-menu-item>nav 3</li> -->
+    </ul>
   </nz-header>
   <nz-layout>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <button (click)="isCollapsed=!isCollapsed">Hola</button>
-    <!-- <nz-sider nzCollapsible [(nzCollapsed)]="isCollapsed" nzWidth="220" [nzTrigger]="triggerTemplate" class="default-sider">
-      <ul nz-menu [nzTheme]="'light'" [nzMode]="'inline'" [nzInlineCollapsed]="isCollapsed">
+    <nz-sider class="default-sider" [(nzCollapsed)]="isCollapsed" nzCollapsedWidth="80" nzWidth="200px" nzCollapsible
+      [nzTrigger]="null">
+      <ul nz-menu nzTheme="light" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
         <li nz-submenu>
           <span title><i nz-icon type="user"></i><span class="nav-text">User</span></span>
           <ul>
@@ -57,7 +35,8 @@
         <li nz-menu-item><span><i nz-icon type="file"></i><span class="nav-text">File</span></span></li>
       </ul>
     </nz-sider>
-    <nz-content [className]="isCollapsed ? 'default-content default-content--sider-closed' : 'default-content default-content--sider-opened'">
+    <nz-content
+      [className]="isCollapsed ? 'default-content default-content--sider-closed' : 'default-content default-content--sider-opened'">
       <div class="default-content__header">
         <h1>Dashboard</h1>
         <h2>Welcome!</h2>
@@ -167,6 +146,6 @@
       <br>
       <br>
       <nz-footer>Footer</nz-footer>
-    </nz-content> -->
+    </nz-content>
   </nz-layout>
 </nz-layout>
