--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,33 +7,15 @@ html {
   box-sizing: border-box;
 }
 
-*, *:after, *:before {
+*,
+*:after,
+*:before {
   box-sizing: inherit;
   padding: 0;
   margin: 0;
 
   font-size: 16px;
 }
-
-// ::-webkit-scrollbar-track {
-//   // background-color: transparent;
-// }
-
-// ::-webkit-scrollbar {
-//   width: 8px;
-// }
-
-// ::-webkit-scrollbar-thumb {
-//   padding: 8px;
-//   border-radius: 4px;
-//   margin: 8px;
-
-//   background: rgba(165, 161, 161, .76);
-
-//   &:hover {
-//     background: rgba(165, 161, 161, 1);
-//   }
-// }
 
 ::-webkit-scrollbar {
   width: 6px;
