--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,11 +1,11 @@
 <nz-layout class="default-layout">
-  <nz-header class="default-header">
-    <nz-sider class="default-logo" [(nzCollapsed)]="isCollapsed" nzCollapsedWidth="64" nzWidth="200px" nzCollapsible
+  <nz-header class="default__header">
+    <nz-sider class="default__header-logo" [(nzCollapsed)]="isCollapsed" nzCollapsedWidth="64" nzWidth="200px" nzCollapsible
       [nzTrigger]="null">
-      <img src="./assets/logo-full.svg" alt="" style="width:160px;">
+      <img class="default__header-img" src="./assets/logo-full.svg" alt="">
     </nz-sider>
-    <ul class="default-top-menu" nz-menu nzTheme="light" nzMode="horizontal">
-      <li nz-menu-item class="trigger" (click)="isCollapsed=!isCollapsed">
+    <ul class="default__nav" nz-menu nzTheme="light" nzMode="horizontal">
+      <li  class="default__nav-item" nz-menu-item class="trigger" (click)="isCollapsed=!isCollapsed">
         <i nz-icon [type]="isCollapsed ? 'menu-unfold' : 'menu-fold' "></i>
       </li>
       <!-- <li nz-menu-item>nav 1</li>
@@ -16,6 +16,11 @@
   <nz-layout>
     <nz-sider class="default-sider" [(nzCollapsed)]="isCollapsed" nzCollapsedWidth="80" nzWidth="200px" nzCollapsible
       [nzTrigger]="null">
+      <div class="default__avatar">
+        <nz-avatar nzIcon="user" nzSrc="//zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"></nz-avatar>
+        <p><strong>Samuel</strong></p>
+        <p>samuel@gmail.com</p>
+      </div>
       <ul nz-menu nzTheme="light" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
         <li nz-submenu>
           <span title><i nz-icon type="user"></i><span class="nav-text">User</span></span>
