--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,7 @@
 }
 
 body {
+  font-size: 16px;
   text-rendering: optimizeLegibility;
 
   -webkit-font-smoothing: antialiased;
@@ -51,3 +52,8 @@ html {
     }
   }
 }
+
+.ant-input {
+  font-size: 16px;
+}
+
