--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nz-layout class="default-layout">
   <app-header></app-header>
   <nz-layout>
-    <nz-sider class="default-sider" [(nzCollapsed)]="isCollapsed" nzCollapsedWidth="80" nzWidth="200px" nzCollapsible
+    <!-- <nz-sider class="default-sider" [(nzCollapsed)]="isCollapsed" nzCollapsedWidth="80" nzWidth="200px" nzCollapsible
       [nzTrigger]="null">
       <div class="default__avatar">
         <nz-avatar nzIcon="user" nzSrc="//zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"></nz-avatar>
@@ -34,15 +34,16 @@
         </li>
         <li nz-menu-item><span><i nz-icon type="file"></i><span class="nav-text">File</span></span></li>
       </ul>
-    </nz-sider>
+    </nz-sider> -->
     <nz-content
-      [className]="isCollapsed ? 'default-content default-content--sider-closed' : 'default-content default-content--sider-opened'">
+      [className]="isCollapsed ? 'default-content default-content--sider-closed' : 'default-content default-content--sider-opened'" style="margin-top:64px">
       <div class="default-content__header">
-        <h1>Dashboard</h1>
-        <h2>Welcome!</h2>
+        <h1 nz-title>Dashboard</h1>
+        <h2 nz-title>Welcome!</h2>
       </div>
       <main class="main">
         <router-outlet></router-outlet>
+        <app-project-list></app-project-list>
       </main>
     </nz-content>
   </nz-layout>
