WIP: project-list component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,10 +37,10 @@
     </nz-sider> -->
     <nz-content
       [className]="isCollapsed ? 'default-content default-content--sider-closed' : 'default-content default-content--sider-opened'" style="margin-top:64px">
-      <div class="default-content__header">
+      <!-- <div class="default-content__header">
         <h1 nz-title>Dashboard</h1>
         <h2 nz-title>Welcome!</h2>
-      </div>
+      </div> -->
       <main class="main">
         <router-outlet></router-outlet>
         <app-project-list></app-project-list>
