--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
+<!-- <nz-alert nzBanner nzType="error" nzMessage="Ocurrrio un error de conexión"></nz-alert> -->
+
 <nz-layout class="default-layout">
   <app-header></app-header>
   <nz-layout>
-    <!-- <nz-sider class="default-sider" [(nzCollapsed)]="isCollapsed" nzCollapsedWidth="80" nzWidth="200px" nzCollapsible
-      [nzTrigger]="null">
+    <nz-sider class="default-sider" [(nzCollapsed)]="isCollapsed" nzTheme="light" nzCollapsedWidth="80" nzWidth="200px"
+      nzCollapsible [nzTrigger]="null">
       <div class="default__avatar">
         <nz-avatar nzIcon="user" nzSrc="//zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"></nz-avatar>
         <p><strong>Samuel</strong></p>
@@ -32,11 +34,31 @@
             <li nz-menu-item>Team 2</li>
           </ul>
         </li>
+        <li nz-submenu>
+          <span title><i nz-icon type="team"></i><span class="nav-text">Team</span></span>
+          <ul>
+            <li nz-menu-item>Team 1</li>
+            <li nz-menu-item>Team 2</li>
+          </ul>
+        </li>
+        <li nz-submenu>
+          <span title><i nz-icon type="team"></i><span class="nav-text">Team</span></span>
+          <ul>
+            <li nz-menu-item>Team 1</li>
+            <li nz-menu-item>Team 2</li>
+          </ul>
+        </li>
+        <li nz-submenu>
+          <span title><i nz-icon type="team"></i><span class="nav-text">Team</span></span>
+          <ul>
+            <li nz-menu-item>Team 1</li>
+            <li nz-menu-item>Team 2</li>
+          </ul>
+        </li>
         <li nz-menu-item><span><i nz-icon type="file"></i><span class="nav-text">File</span></span></li>
       </ul>
-    </nz-sider> -->
-    <nz-content
-      [className]="isCollapsed ? 'default-content default-content--sider-closed' : 'default-content default-content--sider-opened'" style="margin-top:64px">
+    </nz-sider>
+    <nz-content class="default-content default-content--sider-opened">
       <!-- <div class="default-content__header">
         <h1 nz-title>Dashboard</h1>
         <h2 nz-title>Welcome!</h2>
