--- a/src/app/public/login/login.component.html
+++ b/src/app/public/login/login.component.html
@@ -1,17 +1,17 @@
 <div class="login">
   <h1>Iniciar sesión</h1>
-  <form nz-form [formGroup]="validateForm" class="login__form" (ngSubmit)="submitForm()">
+  <form nz-form [formGroup]="validateForm" class="login__form" (ngSubmit)="submitForm($event)">
     <nz-form-item>
       <nz-form-control nzErrorTip="¡Por favor, ingresa tu nombre de usuario!">
         <nz-input-group nzPrefixIcon="user">
-          <input type="text" nz-input formControlName="userName" placeholder="Username" />
+          <input type="text" nz-input formControlName="username" placeholder="Username" />
         </nz-input-group>
       </nz-form-control>
     </nz-form-item>
     <nz-form-item>
       <nz-form-control nzErrorTip="¡Por favor, ingresa tu contraseña de usuario!">
         <nz-input-group nzPrefixIcon="lock">
-          <input type="password" nz-input formControlName="password" placeholder="Password">
+          <input type="password" nz-input formControlName="password" placeholder="Password" >
         </nz-input-group>
       </nz-form-control>
     </nz-form-item>
