--- a/src/app/public/login/login.component.html
+++ b/src/app/public/login/login.component.html
@@ -21,7 +21,7 @@
           <span>Remember me</span>
         </label>
         <a class="login-form-forgot" class="login-form-forgot">Forgot password</a>
-        <button nz-button class="login-form-button" [nzType]="'primary'" nzBlock>Log in</button>
+        <button nz-button class="login-form-button" [nzType]="'primary'" [disabled]="!validateForm.valid" [nzLoading]="isLoading" nzBlock>Login</button>
         Or
         <a>register now!</a>
       </nz-form-control>
