--- a/src/app/auth/project-list/project-list.component.html
+++ b/src/app/auth/project-list/project-list.component.html
@@ -68,7 +68,7 @@
     </div>
   </form>
   <div class="footer">
-    <button type="button" (click)="close()" class="ant-btn" style="margin-right: 8px;"><span>Cancel</span></button>
-    <button type="button" (click)="close()" class="ant-btn ant-btn-primary"><span>Submit</span></button>
+    <button type="button" (click)="close()" class="ant-btn" style="margin-right: 8px;"><span>Cancelar</span></button>
+    <button type="button" (click)="close()" class="ant-btn ant-btn-primary"><span>Crear</span></button>
   </div>
 </nz-drawer>
