--- a/src/app/auth/project-list/project-list.component.html
+++ b/src/app/auth/project-list/project-list.component.html
@@ -64,11 +64,9 @@
         </nz-form-item>
       </div>
     </div>
-    <nz-select nzShowSearch nzAllowClear nzPlaceHolder="Select an user"
-      [(ngModel)]="selectedValue">
-      <nz-option nzLabel="Jack" nzValue="jack"></nz-option>
-      <nz-option nzLabel="Lucy" nzValue="lucy"></nz-option>
-      <nz-option nzLabel="Tom" nzValue="tom"></nz-option>
+    <nz-select nzShowSearch nzAllowClear nzPlaceHolder="Seleccione un usuario"
+      [(ngModel)]="userSelected" formControlName="user_id" >
+      <nz-option *ngFor="let user of users" [nzLabel]="user.name" [nzValue]="user.id"></nz-option>
     </nz-select>
     <div nz-row nzGutter="8">
       <div nz-col nzSpan="24">
